# anki-version-history

./: .gitattributes  .gitignore  LICENSE  README.ko.md  README.md  build.py  pyproject.toml
src/note_version_history/: __init__.py  appconfig.py  baseline.py  blobstore.py  capture_media.py  capture_notes.py  capture_notetypes.py  config.json  config.md  consts.py  db.py  diffing.py  hashing.py  i18n.py  manifest.json  profiles.py  prune.py  records.py  restore.py  scheduler.py  strings.py
src/note_version_history/ui/: actions.py  baseline_wizard.py  history_dialog.py  media_dialog.py  menus.py  notetype_dialog.py  widgets.py
src/note_version_history/user_files/: README.txt
tests/: conftest.py  test_appconfig.py  test_baseline.py  test_blobstore.py  test_capture_media.py  test_capture_notes.py  test_capture_notetypes.py  test_db.py  test_diffing.py  test_hashing.py  test_i18n.py  test_profiles.py  test_prune.py  test_restore.py
